<resources>
    <string name="app_name">iad</string>
    <string name="welcome">Welcome to Ads</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Email / Mobile Number</string>
    <string name="password">PasswordS</string>
    <string name="cell">Phone NO</string>
    <string name="reg">Registration</string>
    <string name="date">DOB</string>
    <string name="save">Save</string>
    <string name="signin">Login</string>
    <string name="forgetpasswordpage">Forget Password</string>
    <string name="forgetpassword">Forget Password?|Other Login Issues?</string>
    <string name="addstore">Add Store</string>
    <string name="addpost">Add Post</string>
    <string name="businessname">Business Name</string>
    <string name="ownermanager">Owner/Coordinate Name</string>
    <string name="LocationMap">Location In Google Map</string>
    <string name="businesstype">Business Type</string>
    <string name="chooseadd">Choose your Add</string>
    <string name="submit">Submit</string>
    <string name="offer">Offer Exp Date</string>
    <string name="facebook">Login With Facebook/Google</string>
    <string name="or">___________ OR ___________</string>
    <string name="newAccount">Create New Account</string>
    <string name="phoneno">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="getpassword">Get Password</string>
    <string name="electronic">Electronics</string>
    <string name="books">Books more</string>
    <string name="lif">Lifestyle</string>
</resources>
