<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_marginTop="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="text"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:maxLength="10"
        android:hint="@string/phoneno"
        android:inputType="phone"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textWebPassword"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"

                android:textSize="20sp"
                android:layout_marginRight="80dp"
                 />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"

                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:maxLength="10"
        android:hint="@string/date"
        android:inputType="date"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:background="@color/button"
        android:textAllCaps="false"
        android:onClick="save"
        android:layout_marginTop="20dp" />

</LinearLayout>