<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_marginTop="20dp"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:id="@+id/tiete"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="12"
            android:inputType="textWebPassword"
            android:id="@+id/tietp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="forget"
        android:text="@string/forgetpassword"
        android:textColor="@color/button" />

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:background="@color/button"
        android:textAllCaps="false"
        android:onClick="signin"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textSize="20sp" />

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        android:textColor="@color/button"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:onClick="registration"
        android:background="#FFFFFF"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textColor="@color/button"
        android:layout_margin="20dp"
     />

</LinearLayout>


